Bug 176100. Tabbing out of file control text field selects text. r=jkeiser, sr=bzbarsky, a=roc+moz. Also fixes bug 132557 and bug 141310.